# full-stack-job-board

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.env  docker-compose.yml  pyproject.toml
backend/: api.py  app_logging.py  deps.py  exceptions.py  main.py  pyproject.toml  requirements.txt
backend/auth/: controller.py  models.py  service.py
backend/config/: sites.json
backend/database/: core.py  database.py  manager.py
backend/database/schemas/: job.py  password_reset.py  user.py
backend/jobs/: caching.py  controller.py  models.py  service.py
backend/scrapers/: scraper.py
backend/tests/: conftest.py  test_jobs_service.py
backend/web_scraping/: parser.py  scraper.py
frontend/: package-lock.json  package.json
frontend/components/: JobCard.svelte  JobSearch.svelte
frontend/src/pages/: 404.astro  index.astro
frontend/styles/: global.css
src/backend/: main.py
src/backend/config/: sites.json
src/backend/data/: jobs.json
src/backend/database/: core.py  database.py  manager.py
src/backend/scrapers/: parsers.py  scraper.py
src/backend/web_scraping/: parser.py  scraper.py
src/frontend/: package-lock.json
src/frontend/components/: JobSearch.svelte
src/frontend/src/pages/: index.astro
