[project]
name = "job-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt==4.3.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.120.0",
    "lxml>=6.0.2",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.2.12",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-orm>=1.2.10",
]
