[project]
name = "backend"
version = "0.1.0"
description = "Backend of the application"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.120.0",
    "lxml>=6.0.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-orm>=1.2.10",
]
